--- a/index1.html
+++ b/index1.html
@@ -17,10 +17,10 @@
             <img src="harry.jpg" alt="error">
         </div>
             <ul>
-                <li class="item"><a href="#">Home</a></li>
-                <li class="item"><a href="#">Services</a></li>
-                <li class="item"><a href="#">About us</a</li>
-                <li class="item"><a href="#">Contact us</a</li>
+                <li class="item"><a href="/FoodDeliveryWebsite/">Home</a></li>
+                <li class="item"><a href="/FoodDeliveryWebsite/Services.html">Services</a></li>
+                <li class="item"><a href="/FoodDeliveryWebsite/About.html">About us</a</li>
+                <li class="item"><a href="/FoodDeliveryWebsite/"Contact us.html>Contact us</a</li>
             </ul>
       
     </nav>
